syntax = "proto3";

package inventory;

option go_package = "api-gateway/proto/inventory;inventory";

service InventoryService {
  rpc CreateProduct (ProductRequest) returns (ProductResponse);
  rpc GetProduct (ProductID) returns (ProductResponse);
}

message ProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 quantity = 4;
}

message ProductResponse {
  string productId = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

message ProductID {
  string id = 1;
}
